# confiq

./: .gitignore  Cargo.toml
example/: build.sh  confiq.toml
example/scripts/: in-work-scope.sh  out-off-work-scope.sh
src/: args.rs  confiq.rs  error_handling.rs  main.rs
src/commands/: build.rs  list.rs  mod.rs  scope.rs  source.rs
src/utils/: load_confiq.rs  match_scope.rs  mod.rs
